--- a/app/styles.scss
+++ b/app/styles.scss
@@ -7,7 +7,6 @@
   background: url('/images/welcome-screen.jpg') no-repeat center center fixed;
   background-size: cover;
   height: 100vh;
-  margin: 0;
 }
 
 .location-input {
@@ -20,11 +19,12 @@
   letter-spacing: 2px;
   margin: 50px;
   outline: none;
+  width: 100%;
 }
 
 /* city styling */
-.denver, .san-diego, .castle-rock, .san-fransico {
-
+.castle-rock {
+  background: url('/images/castle-rock.jpg') no-repeat center center fixed;
 }
 
 .denver {
@@ -37,4 +37,42 @@
 
 .san-fransico {
   background: url('/images/san-fran.jpg') no-repeat center center fixed;
+}
+
+.denver, .san-diego, .castle-rock, .san-fransico {
+  background-size: cover;
+  height: 100vh;
+}
+
+/* weather display */
+section.castle-rock {
+  background: url('/images/castle-rock-blurry.jpg') no-repeat center center fixed;
+  bottom: 0;
+  height: 200px;
+  position: absolute;
+  width: 100%;
+}
+
+section.denver {
+  background: url('/images/denver-blurry.jpg') no-repeat center center fixed;
+  bottom: 0;
+  height: 200px;
+  position: absolute;
+  width: 100%;
+}
+
+section.san-diego {
+  background: url('/images/san-diego-blurry.jpg') no-repeat center center fixed;
+  bottom: 0;
+  height: 200px;
+  position: absolute;
+  width: 100%;
+}
+
+section.san-fransico {
+  background: url('/images/san-fran-blurry.jpg') no-repeat center center fixed;
+  bottom: 0;
+  height: 200px;
+  position: absolute;
+  width: 100%;
 }
