--- a/app/styles.scss
+++ b/app/styles.scss
@@ -10,17 +10,25 @@
   height: 100vh;
 }
 
+h1 {
+  color: white;
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 4em;
+}
+
 .location-input {
-  color: $white;
-  background: none;
+  color: $dark-grey;
+  background: $white;
   border: none;
   font-family: $primary-font;
-  font-size: 4.2em;
-  font-weight: 500;
-  letter-spacing: 2px;
-  margin: 50px 50px 15px;
+  font-size: 2em;
+  font-weight: 400;
+  letter-spacing: 1px;
+  margin: 100px 0 0 70px;
   outline: none;
-  width: 100%;
+  padding-left: 15px;
+  width: 325px;
 }
 
 .submit-button {
@@ -30,8 +38,9 @@
   font-size: 16px;
   letter-spacing: 1px;
   text-transform: uppercase;
-  padding: 10px;
-  margin-left: 50px;
+  padding: 12px;
+  margin-left: 10px;
+  vertical-align: bottom;
   &:hover {
     cursor: pointer;
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
