--- a/app/daily-weather.scss
+++ b/app/daily-weather.scss
@@ -32,20 +32,41 @@ section.san-fransico {
 /*weather styling*/
 article {
   display: inline-block;
-  width: 22%;
+  width: 25%;
+  text-align: center;
 }
 
-article.09-19-2016 {
-  background-color: blue;
-  width: 33%;
-  height: 100%;
-  padding: 15px;
+div.sunny {
+  background: url('/images/svg/sunny.svg') no-repeat;
+  height: 50px;
+  width: 50px;
+  margin: 0 auto;
 }
 
-.sunny {
-  background: url('/images/sunny.svg') no-repeat;
+div.windy {
+  background: url('/images/svg/windy.svg') no-repeat;
+  height: 50px;
+  width: 50px;
+  margin: 0 auto;
 }
 
-.windy {
-  background: url('/images/windy.svg') no-repeat 50px 50px;
+div.thunder {
+  background: url('/images/svg/thunder-storms.svg') no-repeat;
+  height: 50px;
+  width: 50px;
+  margin: 0 auto;
+}
+
+div.snow {
+  background: url('/images/svg/snowy.svg') no-repeat;
+  height: 50px;
+  width: 50px;
+  margin: 0 auto;
+}
+
+div.rain {
+  background: url('/images/svg/rain.svg') no-repeat;
+  height: 50px;
+  width: 50px;
+  margin: 0 auto;
 }
