axe tests passing and updated castle rock image

--- a/app/daily-weather.scss
+++ b/app/daily-weather.scss
@@ -77,7 +77,7 @@ article::before {
   position: absolute;
   height: 80%;
   top: 10%;
-  width: 14%;
+  width: 8.2%;
 }
 
 div.sunny {
@@ -126,4 +126,8 @@ div.cloudy {
 .extreme-weather {
   background-color: $red;
   border-radius: 17px;
+}
+
+.extreme-weather p {
+  color: $black;
 }
