--- a/app/styles.scss
+++ b/app/styles.scss
@@ -1,6 +1,7 @@
 @import 'reset.scss';
 @import 'variables.scss';
 @import 'daily-weather.scss';
+@import 'mobile-layout.scss';
 
 /* home page and input*/
 
