updated file path the windy icon

--- a/app/daily-weather.scss
+++ b/app/daily-weather.scss
@@ -81,7 +81,7 @@ div.sunny {
 }
 
 div.windy {
-  background: url('/images/svg/windy.svg') no-repeat center 5px;
+  background: url('/app/images/svg/windy.svg') no-repeat center 5px;
   height: 55px;
   width: 50px;
   margin: 0 auto;
