--- a/app/daily-weather.scss
+++ b/app/daily-weather.scss
@@ -116,6 +116,13 @@ div.cloudy {
   margin: 0 auto;
 }
 
+div.foggy {
+  background: url('/app/images/svg/fog.svg') no-repeat center 5px;
+  height: 55px;
+  width: 50px;
+  margin: 0 auto;
+}
+
 .extreme-weather {
   background-color: $red;
   border-radius: 17px;
